--- a/roles/build_report_azure/templates/azure.j2
+++ b/roles/build_report_azure/templates/azure.j2
@@ -24,6 +24,7 @@
     <th class="vpc_info">Virtual Machines</th>
   </tr>
 {% set region_specific_nics = azure_vars.network_interfaces.networkinterfaces | selectattr('location', 'equalto', location.name) %}
+{% set nic_names = region_specific_nics | map(attribute='name') | list %}
 {% for virtual_network in region_specific_networks %}
 {% set virtual_network_specific_nics = region_specific_nics | selectattr('virtual_network.name', 'equalto', virtual_network.name) %}
   <tr>
@@ -33,7 +34,7 @@
   <td><table>{% for subnet in virtual_network.subnets %}<tr><td>{{ subnet.name }}</td><td>{{ subnet.address_prefix }}</td></tr>{% endfor %}</table></td>
   <td style="text-align: center;">{{ virtual_network_specific_nics | length }}</td>
   <td><table>{% for nic in virtual_network_specific_nics %}<tr><td>{{ nic.name }}</td><td>{{ nic.mac_address }}</td></tr>{% endfor %}</table></td>
-  <td>{{ azure_vars.azure_vms.vms | selectattr('network_interface_names', 'in', virtual_network_specific_nics) }}</td>
+  <td>{{ azure_vars.azure_vms.vms | selectattr('network_interface_names', 'intersect', nic_names) }}</td>
   </tr>
 {% endfor %}  
 </tbody>
