--- a/roles/template/files/css/main.css
+++ b/roles/template/files/css/main.css
@@ -220,6 +220,13 @@ th.vpc_info {
     min-width: 80px;
 }
 
+th.instance_info {
+  color: #ffffff;
+  background-color: #000000;
+  height: 30px;
+  min-width: 80px;
+}
+
 #cidr_assoc {
     min-width: 155px;
 }
