--- a/roles/template/templates/instances.j2
+++ b/roles/template/templates/instances.j2
@@ -1,12 +1,10 @@
-THIS IS RENDERED
-
+<hr class="sean_line"><br>
+<div id="instance_breakdown">Instance Compliance Report</div>
 <table class="instance_info">
 <tbody>
   <tr>
     <th class="instance_info">Instance name</th>
     <th class="instance_info">VPC id</th>
-    <th class="instance_info">instances <br> running</th>
-    <th class="instance_info">instances <br> stopped</th>
     <th class="instance_info">CIDR block</th>
     <th class="instance_info" id="cidr_assoc">CIDR block<br> associations</th>
     <th class="instance_info">IGW</th>
@@ -14,9 +12,7 @@ THIS IS RENDERED
   {% for instance in value.ec2_instance_info.instances %}
   <tr>
     <td>{{ instance.tags['Name'] | default('<span class="ui-accordion-header-icon ui-icon ui-icon-circle-close"></span>no name tag') }}</td>
-    <td>not done yet</td>
-    <td style="text-align: center;">not done yet</td>
-    <td style="text-align: center;">not done yet</td>
+    <td>{{ instances.vpc_id | default('Unknown VPC ID') }}</td>
     <td>not done yet</td>
     <td style="text-align:center;">not done yet</td>
     <td>not done yet</td>
