--- a/roles/template/templates/instances.j2
+++ b/roles/template/templates/instances.j2
@@ -13,7 +13,7 @@
   <tr>
     <td>{{ instance.tags['Name'] | default('<span class="ui-accordion-header-icon ui-icon ui-icon-circle-close"></span>no name tag') }}</td>
     <td>{{ instance.vpc_id | default('Unknown VPC ID') }}</td>
-    <td>{% if instance.tags | length > 0 %}<ul>{% for key, value in instance.tags %}<li>{{ key }}: {{ value }}</li>{% endfor %}</ul>{% endif %}</td>
+    <td>{% if instance.tags | length > 0 %}<ul>{% for key, value in instance.tags.items() %}<li>{{ key }}: {{ value }}</li>{% endfor %}</ul>{% endif %}</td>
     <td>{% if required_tag not in instance.tags %}<p class="violation">Required tag {{ required_tag }} is missing</p <p class="severity_button">Severity: {{ required_tag_severity }}</p>{% endif %}</td>
     <td>not done yet</td>
   </tr>
