--- a/roles/template/files/css/main.css
+++ b/roles/template/files/css/main.css
@@ -293,3 +293,14 @@ ul {
   margin: 0;
   padding: 0px 0px 0px 20px;
 }
+
+p.violation {
+  color: #ee0000;
+}
+
+class#emea {
+  background-color: #b60045;
+  color: white;
+  padding: 3px;
+  border-radius: 5px;
+}
