--- a/roles/template/templates/instances.j2
+++ b/roles/template/templates/instances.j2
@@ -20,12 +20,10 @@
       {% if hostvars[host]['ansible_facts']['services']['firewalld.service'] is defined and hostvars[host]['ansible_facts']['services']['firewalld.service']['state'] == "running" %}
         <span class="service-running">Running</span>
       {% else %}
+        <class id="severity_button">Severity: {{ firewalld_severity | default('HIGH') }}</class>
         <span class="service-not-running">Not Running</span>
       {% endif %}
     </td>  </tr>
   {% endfor %}
 </tbody>
 </table>
-
-
-hostvars[instance.tags['Name']].
