--- a/roles/template/templates/instances.j2
+++ b/roles/template/templates/instances.j2
@@ -5,7 +5,7 @@
   <tr>
     <th class="instance_info">Instance name</th>
     <th class="instance_info">VPC id</th>
-    <th class="instance_info">Tag</th>
+    <th class="instance_info">Tag(s)</th>
     <th class="instance_info">Tag Policy Violations</th>
     <th class="instance_info">Firewalld Status</th>
     <th class="instance_info">MOTD Status</th>
