--- a/roles/template/templates/instances.j2
+++ b/roles/template/templates/instances.j2
@@ -21,9 +21,17 @@
       {% if 'webserver' not in hostvars[host] %}
         <span class="service-running">Unable to connect and retrieve info.</span>
       {% elif 'webserver' in hostvars[host] and hostvars[host]['webserver'].status != -1 and hostvars[host]['webserver'].status != 404 %}
-        <span class="service-running"><a href="{{ hostvars[host]['webserver'].url }}">{{ hostvars[host]['webserver'].url }}</a></span>
+        <span class="service-running">Webserver: <a href="{{ hostvars[host]['webserver'].url }}">{{ hostvars[host]['webserver'].url }}</a></span>
       {% else %}
-        <span class="service-running">Unknown issue</span>
+        <span class="service-running">Webserver: No Webserver</span>
+      {% endif %}
+      {% set host = instance.tags['Name'] %}
+      {% if 'openscap_webserver' not in hostvars[host] %}
+        <span class="service-running">Unable to connect and retrieve info.</span>
+      {% elif 'openscap_webserver' in hostvars[host] and hostvars[host]['openscap_webserver'].status != -1 and hostvars[host]['openscap_webserver'].status != 404 %}
+        <span class="service-running">OpenSCAP: <a href="{{ hostvars[host]['openscap_webserver'].url }}">{{ hostvars[host]['openscap_webserver'].url }}</a></span>
+      {% else %}
+        <span class="service-running">OpenSCAP: No Report</span>
       {% endif %}
     </td>
     <td>{{ instance.instance_id | default('Unknown instance ID') }}</td>
