--- a/roles/template/templates/report.j2
+++ b/roles/template/templates/report.j2
@@ -11,7 +11,8 @@
 $(function() {
 $( "#accordion > div" ).accordion({
     header: "h3",
-    active: false,
+    // active: false,
+    active: 0,  // Set this to the index of the panel you want expanded by default (0 for the first panel)
 collapsible: true
 });
 });
