--- a/roles/template/templates/instances.j2
+++ b/roles/template/templates/instances.j2
@@ -18,6 +18,7 @@
   <tr>
     <td>{{ instance.tags['Name'] | default('<span class="ui-accordion-header-icon ui-icon ui-icon-circle-close"></span>no name tag') }}</td>
     <td>
+      {% set host = instance.tags['Name'] %}
       {% if 'openscap_webserver' not in hostvars[host] %}
         <span class="service-running">Unable to connect and retrieve info.</span>
       {% elif 'openscap_webserver' in hostvars[host] and hostvars[host]['openscap_webserver'].status != -1 and hostvars[host]['openscap_webserver'].status != 404 %}
