--- a/roles/template/templates/instances.j2
+++ b/roles/template/templates/instances.j2
@@ -3,7 +3,7 @@
 <table class="instance_info">
 <tbody>
   <tr>
-    <th class="instance_info">Instance name</th>
+    <th class="instance_info">Name</th>
     <th class="instance_info">OpenSCAP</th>
     <th class="instance_info">Webserver</th>
     <th class="instance_info">ID</th>
