--- a/roles/template/templates/instances.j2
+++ b/roles/template/templates/instances.j2
@@ -83,10 +83,10 @@
     <td>
       {% set host = instance.tags['Name'] %}
       {% if 'selinux_status' not in hostvars[host] %}
-        <span class="service-running">Unable to connect and retrieve info.</span>
+        <p class="connect">Unable to connect and retrieve info.</p>
       {% elif 'selinux_status' in hostvars[host] and hostvars[host]['selinux_status'].stdout == "Enforcing" %}
         <class id="compliant_button">Compliant.</class>
-        <span class="service-running">The server is in compliance with the SELinux policy.</span>
+       <p class="compliant">The server is in compliance with the SELinux policy.</p>
       {% else %}
         <class id="selinux_severity">Severity: {{ selinux_severity | default('HIGH') }}</class>
         <span class="motd-not-running"><p class="violation">The server is out of compliance with the SELinux policy.</p></span>
