--- a/roles/template/templates/instances.j2
+++ b/roles/template/templates/instances.j2
@@ -64,7 +64,7 @@
         <span class="service-running">Unable to connect and retrieve info.</span>
       {% elif hostvars[host]['ansible_facts']['services']['firewalld.service'] is defined and hostvars[host]['ansible_facts']['services']['firewalld.service']['state'] == "running" %}
       <class id="compliant_button">Compliant.</class>
-      <span class="service-running">Running</span>
+      <p class="compliant">Running</p>
       {% else %}
         <class id="firewalld_severity">Severity: {{ firewalld_severity | default('HIGH') }}</class>
         <span class="service-not-running"><p class="violation">Not Running</p></span>
