--- a/roles/template/templates/report.j2
+++ b/roles/template/templates/report.j2
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <script>
 $(function() {
 $( "#accordion > div" ).accordion({
